static/style.css
/* Bootstrap defines lots of default styling. The styling is customizable by changing the SASS templates, or 
   you can simply override it with some CSS as seen here. It is great for fast styling and mocking up designs. */

html{
    height:100%;
}
/* Setting a bg image for the body, as well as setting min and max widths for reponsiveness across a range of devices. */
body{
    background:url('/static/images/wave2.svg') no-repeat 0 0 fixed;
    background-size: cover;
    background-position: center;
    min-width: 360px;
    max-width: 1920px;
    height: 100%;
}

/* Set a height to push the footer down the page a bit. */
#index-content-container {
    height: 80vh;
}

#classes{
    list-style-type: none;
}

#classes > li {
    margin: 5px;
    margin-bottom: 2em;

}

#section-code-entry{
    text-transform: uppercase;
}

#my-groups-info > p {
    margin-bottom: 0;
}

/* START MEDIA BREAKPOINTS */
@media only screen and (min-width: 360px) {

    .navbar-nav {
        margin-top: 10px;
        margin-left: 15px;
        margin-right: 15px;
        border-radius: 4px;
        position: fixed top;
    }

    .navbar-nav > a {
        padding: 10px;
        margin-left: 15px;
        margin-right: 15px;
    }

    .nav-link-text {
        margin: 0;
    }
}

@media only screen and (min-width: 768px) {
    #create-group-container {
        width: 75%;
    }
}

@media only screen and (min-width: 992px) {

    .navbar-nav > a {
        margin: 5px;
    }

    .col-lg-6 {
        max-width: 49%;
    }
}

@media only screen and (min-width: 1200px) {

    .col-lg-6 {
        max-width: 48%;
    }

    
}

/* Background-size: cover; makes it so that the image stretches to fill the entire container. */
@media only screen and (min-width: 1400px) {
    #create-group-container {
        width: 60%;
    }
}

@media only screen and (min-width: 1600px) {

}

/* END MEDIA BREAKPOINTS */

